force-app/main/default/src/objects/Account/fields/PJN_Relay_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>PJN_Relay_Birthdate__c</fullName>
    <description>Formatted birthdate field used for Relay Network integration.</description>
    <formula>TEXT(YEAR(PersonBirthdate))&amp;
&quot;-&quot;&amp;
TEXT(MONTH(PersonBirthdate))&amp;
&quot;-&quot;&amp;
TEXT(DAY(PersonBirthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relay Birthdate</label>
    <type>Text</type>
</CustomField>