force-app/main/default/src/objects/Account/fields/PJN_Relay_Phone__c.field-meta.xml
<CustomField>
    <fullName>PJN_Relay_Phone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The phone number used for Relay Network SMS communications.</description>
    <inlineHelpText>The phone number used for Relay Network SMS communications.</inlineHelpText>
    <label>Relay Phone</label>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Accounts (Relay Phone)</relationshipLabel>
    <relationshipName>PJN_Relay_Phone</relationshipName>
    <type>Lookup</type>
</CustomField>