force-app/main/default/src/objects/Account/fields/PJN_Relay_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Relay_Phone_Number__c</fullName>
    <description>The phone number associated with the Relay Phone lookup. Used for opt in/out processing by Relay Network.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Relay Phone</label>
    <type>Phone</type>
</CustomField>