force-app/main/default/src/objects/Account/fields/PJN_SLN__c.field-meta.xml
<CustomField>
    <fullName>PJN_SLN__c</fullName>
    <description>Text (15) field for Physician Account SLN.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SLN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>