force-app/main/default/src/objects/Account/fields/PJN_Specialty__c.field-meta.xml
<CustomField>
    <fullName>PJN_Specialty__c</fullName>
    <description>Picklist, Physician Account Specialties.</description>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allergy and Immunology</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Diagnostic Radiology</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Family Medicine</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Lipidology</fullName>
            </value>
            <value>
                <fullName>Medical Geneticist</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Nuclear Medicine</fullName>
            </value>
            <value>
                <fullName>Obstetrics and Gynecology</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Pediatric Cardiology</fullName>
            </value>
            <value>
                <fullName>Pediatric Endocrinology</fullName>
            </value>
            <value>
                <fullName>Pediatric Lipidology</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Physical Medicine and Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Preventative Medicine</fullName>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
            <value>
                <fullName>Radiation Oncology</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>