force-app/main/default/src/objects/Account/fields/PJN_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Undetermined</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Dead</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Retired</label>
            </value>
            <value>
                <fullName>Rejected By Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>