force-app/main/default/src/objects/Account/fields/PJN_Veeva_Network_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Veeva_Network_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Veeva Network Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>