force-app/main/default/src/objects/Account/fields/Primary_Email_Opt_In_MVN__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email_Opt_In_MVN__c</fullName>
    <description>Indicates whether the Primary Email is Opted In by verifying the number of Channel consent records associated to the Contact Information record.</description>
    <formula>PJN_Primary_Email__r.Number_of_Channel_Consent_Opt_Ins_MVN__c &gt;= 1</formula>
    <label>Primary Email Opt In</label>
    <type>Checkbox</type>
</CustomField>