force-app/main/default/src/objects/Account/fields/RelayCCID__c.field-meta.xml
<CustomField>
    <fullName>RelayCCID__c</fullName>
    <description>The Relay CCID uniquely identifies a single Customer (end user) within the Relay platform. Every Relay Customer must have a unique CCID value. The Relay CCID value should never change for the life of the Customer.</description>
    <formula>CASESAFEID( Id )</formula>
    <inlineHelpText>The Relay CCID uniquely identifies a single Customer (end user) within the Relay platform.</inlineHelpText>
    <label>Relay CCID</label>
    <type>Text</type>
</CustomField>