force-app/main/default/src/objects/Account/fields/RelayConsent__c.field-meta.xml
<CustomField>
    <fullName>RelayConsent__c</fullName>
    <description>This field receives any consent write backs from Relay Network (e.g. Stop notifications) for the customer (CCID).</description>
    <label>Relay Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Written</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>