force-app/main/default/src/objects/Account/fields/Screening_Results_on_Conversion_MVN__c.field-meta.xml
<CustomField>
    <fullName>Screening_Results_on_Conversion_MVN__c</fullName>
    <description>Captures the screening results when this account is converted from a lead. Used to determine which care plan template to apply.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Screening Results on Conversion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>