force-app/main/default/src/objects/Account/fields/Specialists_Shared_on_Conversion_MVN__c.field-meta.xml
<CustomField>
    <fullName>Specialists_Shared_on_Conversion_MVN__c</fullName>
    <description>Indicates if the list of specialists was shared when converting the consumer to an account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialists Shared on Conversion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>