force-app/main/default/src/objects/Account/recordTypes/HealthCloudGA__IndustriesBusiness.recordType-meta.xml
<RecordType>
    <fullName>HealthCloudGA__IndustriesBusiness</fullName>
    <active>true</active>
    <description>Represents a business or an organization</description>
    <label>Business</label>
</RecordType>