force-app/main/default/src/objects/Account/recordTypes/MVN_Treatment_Site.recordType-meta.xml
<RecordType>
    <fullName>MVN_Treatment_Site</fullName>
    <active>true</active>
    <description>Defines a site of care for a patient</description>
    <label>Treatment Site</label>
</RecordType>