force-app/main/default/src/objects/Account/recordTypes/PJN_Organization.recordType-meta.xml
<RecordType>
    <fullName>PJN_Organization</fullName>
    <active>true</active>
    <description>Defines a healthcare organization where physicians and staff work</description>
    <label>Organization</label>
</RecordType>