force-app/main/default/src/objects/Account/recordTypes/PJN_Pharmacy.recordType-meta.xml
<RecordType>
    <fullName>PJN_Pharmacy</fullName>
    <active>true</active>
    <description>Defines a specialty or preferred pharmacy from which patients receive product</description>
    <label>Pharmacy</label>
</RecordType>