force-app/main/default/src/objects/Account/listViews/PJN_All_Patients.listView-meta.xml
<ListView>
    <fullName>PJN_All_Patients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>HealthCloudGA__CarePlan__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PJN_Patient</value>
    </filters>
    <label>All Patients</label>
</ListView>